--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ main:
   - title: "Publications"
     url: https://scholar.google.com/citations?hl=en&user=zHF9tloAAAAJ
 
-  - title: "Education"
-    url: /education/    
+  # - title: "Education"
+  #   url: /education/    
 
   - title: "Teaching"
     url: /teaching/   
