--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /teaching/   
   
   - title: "CV"
-    url: /cv/
+    url: /files/Resume.pdf
     
   # - title: "Portfolio"
   #   url: /portfolio/
