--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
   
   - title: "CV"
     url: /files/Resume.pdf
+
+  - title: "Test"
+    url: /my_publication/
     
   # - title: "Portfolio"
   #   url: /portfolio/
