--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /files/Resume.pdf
 
   - title: "Test"
-    url: /my_publication/
+    url: /markdown/
     
   # - title: "Portfolio"
   #   url: /portfolio/
