--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   - title: "CV"
     url: /files/Resume.pdf
 
-  - title: "Test"
+  - title: "Publications"
     url: /markdown/
     
   # - title: "Portfolio"
