--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: https://scholar.google.com/citations?hl=en&user=zHF9tloAAAAJ
+  # - title: "Publications"
+  #   url: https://scholar.google.com/citations?hl=en&user=zHF9tloAAAAJ
 
   # - title: "Education"
   #   url: /education/    
@@ -18,7 +18,7 @@ main:
     url: /files/Resume.pdf
 
   - title: "Publications"
-    url: /markdown/
+    url: /my_publication/
     
   # - title: "Portfolio"
   #   url: /portfolio/
@@ -26,5 +26,5 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "Guide"
-    url: /my_publication/
+  # - title: "Guide"
+  #   url: /my_publication/
