--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,8 @@ main:
   - title: "CV"
     url: /files/Resume.pdf
 
+  - title: "Experience"
+    url: /experience/ 
  
     
   # - title: "Portfolio"
